--- a/index.html
+++ b/index.html
@@ -4,33 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript exercises</title>
 </head>
 <body>
-    <h2>Salute</h2>
-    <div id="message"></div>
+    <h1>Main Page</h1>
+    <hr/>
+    <p><a href="Basic_Activities/hello_world.html">Hello world</a></p>
+    <p><a href="Add/add.html">Add</a></p>
+    <p><a href="exerciseA-1/a1.html">Exercise A-1</a></p>
+    <p><a href="exerciseA-2/a2.html">Exercise A-2</a></p>
+    <p><a href="exerciseA-3/a3.html">Exercise A-3</a></p>
+    <p><a href="exerciseB-2/b2.html">Exercise B-2</a></p>
+    <p><a href="exerciseC-1/c1.html">Exercise C-1</a></p>
+    <p><a href="exerciseC-2/c2.html">Exercise C-2</a></p>
 
-    <h2>Add</h2>
-    <input id="num1">
-    <input id="num2">
-    <button type="button" onclick="calculate()">Add</button> 
-    <p id="result"></p>
-
-    <script>
-        const msg = "Hello World"
-        document.querySelector('#message').innerHTML=msg
-
-        function calculate(){
-        var n1, n2, amount
-
-        n1 = document.querySelector('#num1').value
-        n2 = document.querySelector('#num2').value
-
-        amount = parseFloat(n1) + parseFloat(n2)
-
-        document.querySelector('#result').innerHTML = amount
-    
-    }
-    </script>
 </body>
 </html>
