--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Main Page</h1>
     <hr/>
-    <p><a href="Basic_Activities/hello_world.html">Hello world</a></p>
+    <p><a href="Hello_World/hello_world.html">Hello world</a></p>
     <p><a href="Add/add.html">Add</a></p>
     <p><a href="exerciseA-1/a1.html">Exercise A-1</a></p>
     <p><a href="exerciseA-2/a2.html">Exercise A-2</a></p>
