--- a/Add/add.html
+++ b/Add/add.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Script that add's 2 numbers</h1>
     <input id="num1">
     <input id="num2">
     <button type="button" onclick="calculate()">Add</button> 
