--- a/exerciseB-2/b2.html
+++ b/exerciseB-2/b2.html
@@ -12,7 +12,7 @@
     <img id="tree" style="margin-left:130px;">
 </body>
     <script>
-        function getDate(){
+        function getDate01(){
 
             const now = new Date()
             const day = now.getDate()
@@ -35,6 +35,6 @@
             document.querySelector('#year').innerHTML = ansYear
         }
 
-        getDate()
+        getDate01()
     </script>
 </html>
