--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <hr/>
     <p><a href="Hello_World/hello_world.html">Hello world</a></p>
     <p><a href="Add/add.html">Add</a></p>
+    <p<a href="randomuser/randomuser_api.html">Random User</a>></p>
     <p><a href="exerciseA-1/a1.html">Exercise A-1</a></p>
     <p><a href="exerciseA-2/a2.html">Exercise A-2</a></p>
     <p><a href="exerciseA-3/a3.html">Exercise A-3</a></p>
     <p><a href="exerciseB-2/b2.html">Exercise B-2</a></p>
     <p><a href="exerciseC-1/c1.html">Exercise C-1</a></p>
     <p><a href="exerciseC-2/c2.html">Exercise C-2</a></p>
-
+    <p><a href="exerciseD-2/d2.html">Exercise D-2</a></p>
+    <p><a href="exerciseD-3/d3.html">Exercise D-3</a></p>
 </body>
 </html>
