--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr/>
     <p><a href="Hello_World/hello_world.html">Hello world</a></p>
     <p><a href="Add/add.html">Add</a></p>
-    <p<a href="randomuser/randomuser_api.html">Random User</a></p>
+    <p><a href="randomuser/randomuser_api.html">Random User</a></p>
     <p><a href="exerciseA-1/a1.html">Exercise A-1</a></p>
     <p><a href="exerciseA-2/a2.html">Exercise A-2</a></p>
     <p><a href="exerciseA-3/a3.html">Exercise A-3</a></p>
