--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p><a href="exerciseA-1/a1.html">Exercise A-1</a></p>
     <p><a href="exerciseA-2/a2.html">Exercise A-2</a></p>
     <p><a href="exerciseA-3/a3.html">Exercise A-3</a></p>
+    <p><a href="exerciseB-1/b1.html">Exercise B-1</a></p>
     <p><a href="exerciseB-2/b2.html">Exercise B-2</a></p>
     <p><a href="exerciseC-1/c1.html">Exercise C-1</a></p>
     <p><a href="exerciseC-2/c2.html">Exercise C-2</a></p>
